--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,12 @@
         }
     },
     "require-dev": {
-       "phpunit/phpunit": "^10.0"
+       "phpunit/phpunit": "^10.0",
+        "phpstan/phpstan": "^2.1"
     },
     "scripts": {
-        "test": "phpunit tests/"
+        "test": "phpunit tests/",
+        "phpstan": "phpstan analyse"
     },
     "config": {
         "platform": {
